# subsync

./: AGENTS.md  PLAN.md  README.md  pyproject.toml
src/subsync/: __init__.py  __main__.py  align.py  cli.py
tests/: test_align.py  test_cli.py
tests/fixtures/: source.ass  source_en.srt  source_same.srt  target_cp1252.srt  target_fr.srt  target_mismatch.srt  target_same.srt
