[project]
name = "subsync"
version = "0.1.0"
description = "Subtitle sync CLI — merge timestamps from one subtitle file with text from another"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pysubs2>=1.8.0",
]

[project.scripts]
subsync = "subsync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/subsync"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
